<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_camera_content_description">About Camera</string>
    <string name="about_camera_title">About Camera</string>
    <string name="accessibility_aicamera_off">AiCamera off</string>
    <string name="accessibility_aicamera_on">AiCamera on</string>
    <string name="accessibility_flash_auto">flash auto</string>
    <string name="accessibility_flash_off">flash off</string>
    <string name="accessibility_flash_on">flash on</string>
    <string name="accessibility_hdr_auto">HDR auto</string>
    <string name="accessibility_hdr_off">HDR off</string>
    <string name="accessibility_hdr_on">HDR on</string>
    <string name="accessibility_matrixdisplay_off">MatrixDisplay off</string>
    <string name="accessibility_matrixdisplay_on">MatrixDisplay on</string>
    <string name="accessibility_mode">Camera mode</string>
    <string name="accessibility_setting">Setting</string>
    <string name="accessibility_shutter">Shutter button</string>
    <string name="accessibility_switch_to_panorama">Panorama mode</string>
    <string name="accessibility_thumbnail">Most recent photo</string>
    <string name="accessibility_zoom_ratio">zoom ratio</string>
    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_manager">资源管理</string>
    <string name="action_select">选择</string>
    <string name="activity_not_found">"The App hasn't been installed"</string>
    <string name="aeaf_lock_indicator">AE/AF Lock</string>
    <string name="ai_camera_scene_animal">Animal</string>
    <string name="ai_camera_scene_building">Building</string>
    <string name="ai_camera_scene_car">Car</string>
    <string name="ai_camera_scene_flower">Flower</string>
    <string name="ai_camera_scene_food">Food</string>
    <string name="ai_camera_scene_night">Night</string>
    <string name="ai_camera_scene_people">People</string>
    <string name="ai_camera_scene_plant">Plant</string>
    <string name="ai_camera_scene_scenery">Scenery</string>
    <string name="ai_camera_scene_sky">Sky</string>
    <string name="ai_camera_scene_snow">Snow</string>
    <string name="ai_camera_scene_sunset">Sunset</string>
    <string name="ai_camera_scene_text">Text</string>
    <string name="ai_camera_scene_unknown">Unknown</string>
    <string name="aicamera_tip_button">OK</string>
    <string name="aicamera_tip_checkbox">Do not remind again.</string>
    <string name="aicamera_tip_scene">The Intelligent identification of 13 scenes, easy to take good photos.</string>
    <string name="aicamera_tip_title">Smart photo introduction</string>
    <string name="aicamera_tip_toast">The smart photo mode has been opened</string>
    <string name="ais_content_description">AIS</string>
    <string name="ais_title">Anti-shake</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">资源中心</string>
    <string name="asd_hdr_guide">Turn on HDR may get better photo effect</string>
    <string name="auto">Auto</string>
    <string name="auto_exit_after_two_minites">Exit the camera after two minutes without operation</string>
    <string name="auto_exit_content_description">Auto Exit</string>
    <string name="auto_exit_title">Auto Exit</string>
    <string name="beautyface_dialog_title">Bface</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">Camera</string>
    <string name="can_not_use_storage">SD Card not available</string>
    <string name="cannot_connect_camera_new">"Can't connect to the camera. Please make sure to close other apps that may use camera or flashlight."</string>
    <string name="children_dialog_title">Child</string>
    <string name="close">Close</string>
    <string name="confirm_restore_message">"Continue to restore Camera's default settings?"</string>
    <string name="continuous_not_support">Continuous shooting is not supported</string>
    <string name="continuous_saving_pictures">Saving %1$d pictures</string>
    <string name="countdown_timer_duration_10s">Countdown timer duration is set to 10 seconds</string>
    <string name="countdown_timer_duration_3s">Countdown timer duration is set to 3 seconds</string>
    <string name="countdown_timer_off">Countdown timer is off</string>
    <string name="create_tiny_planet">Create Tiny Planet</string>
    <string name="dc_disable">敬请期待</string>
    <string name="dc_install">安装</string>
    <string name="dc_installed">已安装</string>
    <string name="dc_installing">安装中</string>
    <string name="dc_title">资源中心</string>
    <string name="dc_uninstalling">卸载中</string>
    <string name="dc_update">更新</string>
    <string name="default_scroll_format">页 %1$d of %2$d</string>
    <string name="delete_selection_one">Delete selected item?</string>
    <string name="deleted">Deleted</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="detection_result_female_baby">baby</string>
    <string name="detection_result_female_beauty">female</string>
    <string name="detection_result_female_girl">girl</string>
    <string name="detection_result_female_lady">female</string>
    <string name="detection_result_female_oldlady">grandma</string>
    <string name="detection_result_female_woman">female</string>
    <string name="detection_result_female_young">girl</string>
    <string name="detection_result_male_baby">baby</string>
    <string name="detection_result_male_bigman">male</string>
    <string name="detection_result_male_boy">boy</string>
    <string name="detection_result_male_hansome">male</string>
    <string name="detection_result_male_man">male</string>
    <string name="detection_result_male_old">grandpa</string>
    <string name="detection_result_male_young">boy</string>
    <string name="detection_result_unknow">Unknown</string>
    <string name="detection_result_untrust_baby">baby</string>
    <string name="detection_result_untrust_bigman">chairman</string>
    <string name="detection_result_untrust_boy">child</string>
    <string name="detection_result_untrust_hansome">employee</string>
    <string name="detection_result_untrust_man">manager</string>
    <string name="detection_result_untrust_old">winner</string>
    <string name="detection_result_untrust_young">student</string>
    <string name="dialog_ok">OK</string>
    <string name="dng_content_description_off">DNG_DISC_OFF</string>
    <string name="dng_content_description_on">DNG_DISC_ON</string>
    <string name="dng_title">RAW(.DNG)</string>
    <string name="dual_camera_lens_covered_toast">Lens covered.</string>
    <string name="dual_camera_low_constract_toast">Low contract may affect Dual camera effects.</string>
    <string name="dual_camera_lowlight_toast">Lowlight may affect Dual camera effects.</string>
    <string name="dual_camera_no_data_calibration_toast">Dual camera otp data error</string>
    <string name="dual_camera_too_close_toast">Too close to object for Dual camera effects.</string>
    <string name="dual_camera_too_far_toast">Too far to object for Dual camera effects.</string>
    <string name="duration">Duration</string>
    <string name="ec_child_mode">儿童模式</string>
    <string name="ec_download">下载</string>
    <string name="ec_download_ok">已下载</string>
    <string name="ec_fragment_left_duration">1000</string>
    <string name="ec_jigsaw_mode">拼图模式</string>
    <string name="ec_manager_cancel">退出编辑</string>
    <string name="ec_manager_select_all">全选</string>
    <string name="ec_manager_select_cancel">取消全选</string>
    <string name="ec_net_gprs__continue">继续</string>
    <string name="ec_net_gprs__diplay">不再显示</string>
    <string name="ec_net_gprs_cancel">取消</string>
    <string name="ec_net_gprs_info">移动数据使用中，这样真的好吗？</string>
    <string name="ec_net_gprs_setwifi">设置WLAN</string>
    <string name="ec_net_gprs_title">提示</string>
    <string name="ec_pose_mode">模特模式</string>
    <string name="ec_pose_mode_female">女生</string>
    <string name="ec_pose_mode_male">男生</string>
    <string name="ec_pose_mode_more">更多</string>
    <string name="ec_pose_mode_people">多人</string>
    <string name="ec_titlebar_right">资源管理</string>
    <string name="ec_watermark_catchword">潮语</string>
    <string name="ec_watermark_food">美食</string>
    <string name="ec_watermark_mode">水印模式</string>
    <string name="ec_watermark_mood">心情</string>
    <string name="ec_watermark_regards">情意</string>
    <string name="ec_watermark_selfie">自拍</string>
    <string name="ec_watermark_travel">旅行</string>
    <string name="eis_content_description">EIS</string>
    <string name="eis_title">EIS</string>
    <string name="elements_center">素材下载</string>
    <string name="elements_center_check">全部查看</string>
    <string name="elements_center_title">素材中心</string>
    <string name="elements_center_titlebar_back">返回</string>
    <string name="freeme_ffb_cartoon">cartoon</string>
    <string name="freeme_ffb_decoration">decoration</string>
    <string name="freeme_ffb_delight">delight</string>
    <string name="freeme_ffb_expression">expression</string>
</resources>