<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff000000" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/ec_net_gprs_title" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/detail_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/ec_net_gprs_info" />
        <CheckBox android:textColor="#ff929191" android:id="@id/displaybox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ec_net_gprs__diplay" style="@style/EcCheckBox" />
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <Button android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/setwifi" android:background="@drawable/btn_element_center_left_net" android:layout_width="155.0dip" android:layout_height="45.0dip" android:text="@string/ec_net_gprs_setwifi" />
            <Button android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/mcontinue" android:background="@drawable/btn_element_center_net_right" android:layout_width="155.0dip" android:layout_height="45.0dip" android:text="@string/ec_net_gprs__continue" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>