<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/tip_dialog_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/freeme_color_black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/aicamera_tip_title" />
    <View android:background="@color/aicamera_tip_line_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="12.0dip" />
    <TextView android:textColor="@color/aicamera_tip_summy_color" android:id="@id/dailog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/aicamera_tip_scene" />
    <GridLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@id/aicamera_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:rowCount="4" android:columnCount="4">
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_people" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_people" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_flower" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_flower" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_building" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_building" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_car" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_car" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_food" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_food" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_scenery" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_scenery" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_night" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_night" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_snow" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_snow" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_plant" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_plant" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_text" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_sky" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_sky" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_animal" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_animal" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="@dimen/aicamera_tip_item_width" android:layout_height="@dimen/aicamera_tip_item_height">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ai_sunset" />
            <TextView android:textColor="@color/aicamera_tip_text_color" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aicamera_tip_item_text_marginTop" android:text="@string/ai_camera_scene_sunset" />
        </LinearLayout>
    </GridLayout>
    <CheckBox android:textColor="@color/aicamera_tip_checkbox_color" android:id="@id/aicamera_tip_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aicamera_tip_checkbox" android:layout_marginStart="16.0dip" style="@style/AiCameraCheckBoxTheme" />
    <View android:background="@color/aicamera_tip_line_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="15.0dip" />
    <TextView android:textSize="15.0sp" android:textColor="@color/freeme_new_main_color" android:layout_gravity="center" android:id="@id/aicamera_tip_btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/aicamera_tip_button" />
</LinearLayout>