<?xml version="1.0" encoding="utf-8"?>
<com.freeme.elementscenter.dc.ui.DCElementsCenterView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dc_elements_center_item_height" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:id="@id/watermark" android:text="@string/ec_watermark_mode" android:drawableTop="@drawable/dc_watermark" style="@style/DcTextStyle" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:id="@id/pose" android:text="@string/ec_pose_mode" android:drawableTop="@drawable/dc_pose" style="@style/DcTextStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dc_elements_center_item_height" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:id="@id/child" android:text="@string/ec_child_mode" android:drawableTop="@drawable/dc_child" style="@style/DcTextStyle" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:id="@id/jigsaw" android:visibility="gone" android:text="@string/ec_jigsaw_mode" android:drawableTop="@drawable/dc_jigsaw" style="@style/DcTextStyle" />
        </LinearLayout>
    </LinearLayout>
</com.freeme.elementscenter.dc.ui.DCElementsCenterView>