<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/new_theme_color" android:layout_width="fill_parent" android:layout_height="@dimen/elements_center_titlebar_h"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="@android:color/white" android:id="@id/title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/elements_center_title" android:layout_centerInParent="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/ec_titlebar_text_color" android:id="@id/back" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/elements_center_titlebar_back" android:drawableLeft="@drawable/ec_back_btn" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="?android:buttonStyleSmall" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@drawable/ec_titlebar_text_color" android:id="@id/right" android:background="#00000000" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginRight="10.0dip" android:text="@string/ec_titlebar_right" android:drawableLeft="@drawable/ec_titlebar_manage" android:drawablePadding="3.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="?android:buttonStyleSmall" />
</RelativeLayout>