<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/title_strip" android:background="@drawable/setting_second_pop_bg" android:layout_width="0.0dip" android:layout_height="@dimen/mode_bf_bar_height" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/decorationlayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/decorationview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/freeme_ffb_decoration" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/hct_shutter_title_size" android:textColor="@drawable/stretch_list_item_text_color" android:gravity="center" android:id="@id/decoration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/freeme_ffb_decoration" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/delightlayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/delightview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/freeme_ffb_delight" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/hct_shutter_title_size" android:textColor="@drawable/stretch_list_item_text_color" android:gravity="center" android:id="@id/delight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/freeme_ffb_delight" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/cartoonlayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/cartoonview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/freeme_ffb_cartoon" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/hct_shutter_title_size" android:textColor="@drawable/stretch_list_item_text_color" android:gravity="center" android:id="@id/cartoon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/freeme_ffb_cartoon" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/expressionlayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/expressionview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/freeme_ffb_expression" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="@dimen/hct_shutter_title_size" android:textColor="@drawable/stretch_list_item_text_color" android:gravity="center" android:id="@id/expression" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/freeme_ffb_expression" />
    </LinearLayout>
</LinearLayout>